--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -13,10 +13,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
 
-    - name: Set up Go 1.19
+    - name: Set up Go
       uses: actions/setup-go@v1
       with:
-        go-version: 1.19
+        go-version: 1.25
       id: go
 
     - name: Check out code into the Go module directory
@@ -24,11 +24,11 @@ jobs:
 
     - name: Get dependencies
       run: |
-        cd smtp && go get -v -t -d 
+        cd smtp && go get -v -t
         cd ..
-        cd imapclient && go get -v -t -d 
+        cd imapclient && go get -v -t
         cd ..
-        cd smtpclient && go get -v -t -d 
+        cd smtpclient && go get -v -t
         cd ..
         if [ -f Gopkg.toml ]; then
             curl https://raw.githubusercontent.com/golang/dep/master/install.sh | sh
