--- a/smtp/Dockerfile
+++ b/smtp/Dockerfile
@@ -1,4 +1,4 @@
-FROM golang:1.21-alpine3.19 as builder
+FROM golang:1.25-alpine3.23 as builder
 RUN apk add --no-cache git
 RUN apk add --no-cache build-base
 RUN mkdir /app
@@ -7,11 +7,12 @@ WORKDIR /app
 RUN go get -d -v
 RUN go build -v -o main .
 
-FROM alpine:3.19
+FROM alpine:3.23
 RUN apk --no-cache add ca-certificates
 WORKDIR /root/
 COPY --from=builder /app/main .
 COPY --from=builder /app/.env .
 EXPOSE 1025
+EXPOSE 1143
 
 CMD ["/root/main"]
